<?xml version="1.0" encoding="utf-8"?>
<!--
   Project: SpotTicket
   Copyright 2025 Olgun Yılmaz

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<resources>
    <string name="app_name">BiletKutusu</string>
    <string name="app_motto">Etkinliğin adresi değiliz ama etkinliğin adresini size verebiliriz :)</string>

    <string name="already_account_text">Hesabınız var mı?</string>
    <string name="answer_cancel">İPTAL</string>
    <string name="answer_confirm">ONAYLA</string>
    <string name="answer_no">Hayır</string>
    <string name="answer_yes">Evet</string>

    <string name="back_to_login_text">Giriş Ekranına Dön</string>
    <string name="buy_text">Satın Al</string>

    <string name="change_text">DEĞİŞTİR</string>
    <string name="check_text">KONTROL ET</string>
    <string name="creation_date_text">Kayıt Tarihi : </string>

    <string name="date_text">Tarih :</string>
    <string name="date_not_founded_text">Tarih bulunamadı!</string>

    <string name="default_city_name">Amsterdam</string>
    <string name="default_category_name">Tüm Kategoriler</string>
    <string name="default_venue_name">Şükrü Saraçoğlu Stadyumu</string>
    <string name="default_venue_latitude">40.98780984859083</string>

    <string name="default_venue_longitude">29.03689029646077</string>
    <string name="delete_account_text">HESAP SİLME</string>
    <string name="delete_account_error_text">Hesap silme başarısız</string>
    <string name="delete_account_question">Hesabınızı silmek istediğinizden emin misiniz?</string>
    <string name="delete_my_account">HESABIMI SİL</string>
    <string name="deleting_text">Siliniyor</string>
    <string name="deleting_data_text">Veriler Siliniyor</string>

    <string name="do_you_have_an_account">Hesabınız yok mu?</string>

    <string name="email_text">E-Mail :</string>
    <string name="email_sent_text">%s e-maili gönderildi.</string>
    <string name="enter_password_for_delete_account">Hesabınızı silmek için şifrenizi girin</string>
    <string name="email_verification_message">Giriş yapabilmek için gönderilen linkten e-posta adresinizi doğrulamanız gerekmektedir.</string>
    <string name="event_description_text">%s etkinliği, %s | %s tarihinde siz değerli etkinlikseverlerle buluşuyor!</string>
    <string name="event_type_text">Etkinlik türü : </string>
    <string name="exit_text">Çıkış</string>
    <string name="exit_question_text">Uygulamadan çıkmak istediğinize emin misiniz?</string>

    <string name="error_sign_up_text">Kayıt olunamadı.</string>
    <string name="error_text">Hata!</string>
    <string name="error_validation_email_send_text">Doğrulama e-postası gönderilemedi</string>

    <string name="filter_text">FİLTRELE</string>
    <string name="forgot_password_text">- - - Şifreni mi unuttun? - - -</string>

    <string name="gallery_permission_text">Galeri için izin gerekli!</string>
    <string name="give_permission_text">İzin ver</string>

    <string name="successfully_change_password_text">Şifre başarıyla değiştirildi!</string>
    <string name="successfully_city_updated_text">Şehir bilgisi başarıyla güncellendi!</string>
    <string name="successfully_delete_account_text">Hesabınız başarıyla silindi!</string>
    <string name="successfully_image_change_text">Fotoğraf başarıyla değiştirildi!</string>
    <string name="successfully_sign_up_text">Başarıyla kayıt oldunuz</string>

    <string name="lets_go_text">Haydi Başlayalım !</string>
    <string name="loading_text">Yükleniyor . . .</string>
    <string name="login_text">GİRİŞ YAP</string>

    <string name="my_events_text">Etkinliklerim</string>

    <string name="name_text">İsim : </string>
    <string name="notification_content">Favori etkinliğin yaklaşıyor. Son %d gün kaldı! Hatırlatmak istedik :)</string>
    <string name="notification_last_day_content">Bugün günlerden %s ! Haydi, etkinliğini kaçırma...</string>
    <string name="notification_permission_text">Spot Ticket size bildirim göndersin mi?</string>

    <string name="old_password_text">Eski Şifre :</string>

    <string name="password_text">Şifre :</string>
    <string name="password_must_be_different">Yeni şifreniz eski şifrenizden farklı olmalıdır!</string>
    <string name="plain_loading_text">Yükleniyor </string>
    <string name="please_check_your_info_text">Lütfen girdiğiniz bilgileri kontrol edin!</string>
    <string name="please_select_your_city_text">Lütfen şehrinizi seçin . . .</string>
    <string name="please_wait_text">Lütfen Bekleyiniz </string>

    <string name="recommended_events_text">Önerilen Etkinlikler</string>
    <string name="remember_me_text">Beni Hatırla</string>
    <string name="reset_password_text">Şifremi Sıfırla</string>
    <string name="result_founded_text">SONUÇ BULUNDU</string>
    <string name="review_text">İNCELE</string>

    <string name="save">Kaydet</string>
    <string name="search_city_text">Şehir ara . . .</string>
    <string name="search_events_text">Etkinlik Ara . . .</string>
    <string name="searching_text">Aranıyor . . .</string>
    <string name="see_all_text">Daha fazla</string>
    <string name="select_text">Seç...</string>
    <string name="send_password_reset_link">Şifrenizi gönderilen linkten sıfırlayabilirsiniz.</string>
    <string name="sign_up_text">KAYIT OL</string>
    <string name="surname_text">Soy isim :</string>

    <string name="upcoming_events_text">Yaklaşan Etkinlikler</string>
    <string name="username_text">Kullanıcı Adı : </string>

    <string name="valid_password_text">Şifre Tekrar :</string>
    <string name="validation_email_send_text">Doğrulama e-postası gönderildi!</string>
    <string name="validation_error_text">Kimlik doğrulama başarısız!</string>

    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_change_password">Şifre Değiştirme</string>
    <string name="title_edit">Düzenle</string>
    <string name="title_language">Dil : </string>
    <string name="title_log_out">Oturumu Kapat</string>
    <string name="title_notifications">Bildirimler</string>
    <string name="title_settings">Ayarlar</string>

    <string name="weak_search_error">En az 3 harf girmelisiniz!</string>
    <string name="welcome_message">Seni tekrar görmek güzel</string>
</resources>