<!--
   Project: EventBox
   Copyright 2025 Olgun Yılmaz

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sign_up_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.DisplayFragment">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintWidth_percent="0.153"
        app:layout_constraintHeight_percent="0.071"

        app:layout_constraintVertical_bias="0.04"
        app:layout_constraintHorizontal_bias="0.05"

        android:background="@drawable/button_background"
        android:src="@drawable/back_button"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/changeTitle"

        android:layout_width="wrap_content"
        android:layout_height="0dp"

        android:gravity="center"
        android:textSize="25sp"
        android:fontFamily="@font/lexend_bold"

        android:text="@string/title_change_password"

        android:textColor="@color/event_name_gray"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"/>

    <ImageView
        android:id="@+id/line"

        android:layout_width="0dp"
        android:layout_height="0dp"

        android:src="@drawable/line"

        app:layout_constraintHeight_percent="0.02"
        app:layout_constraintVertical_bias="0.01"

        app:layout_constraintTop_toBottomOf="@id/changeTitle"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="@id/changePasswordButton"
        app:layout_constraintStart_toStartOf="@id/changePasswordButton"/>

    <EditText
        android:id="@+id/oldPasswordText"

        android:layout_width="0dp"
        android:layout_height="0dp"

        android:padding="10dp"
        android:background="@drawable/rounded_corners"

        android:textSize="18sp"

        android:hint="@string/old_password_text"

        android:inputType="textPassword"

        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/changePasswordButton"

        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="@id/changePasswordButton"

        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintVertical_bias="0.15" />


    <EditText
        android:id="@+id/newPasswordText"

        android:layout_width="0dp"
        android:layout_height="0dp"

        android:padding="10dp"
        android:background="@drawable/rounded_corners"

        android:textSize="18sp"

        android:hint="@string/password_text"

        android:inputType="textPassword"

        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/changePasswordButton"

        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="@id/changePasswordButton"

        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintVertical_bias="0.4" />

    <EditText
        android:id="@+id/newPasswordValidText"

        android:layout_width="0dp"
        android:layout_height="0dp"

        android:padding="10dp"
        android:background="@drawable/rounded_corners"

        android:textSize="18sp"

        android:hint="@string/valid_password_text"

        android:inputType="textPassword"

        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/changePasswordButton"

        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="@id/changePasswordButton"

        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintVertical_bias="0.65" />

    <Button
        android:id="@+id/changePasswordButton"

        android:layout_width="0dp"
        android:layout_height="0dp"

        android:background="@drawable/rounded_corners"

        android:textSize="18sp"

        android:text="@string/change_text"

        app:layout_constraintWidth_percent="0.7"

        android:textColor="@color/event_name_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/newPasswordValidText" />

    <TextView
        android:id="@+id/loadingTextView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/loading_text"
        android:gravity="center"
        android:textColor="@color/event_name_gray"
        android:textSize="35sp"

        android:visibility="invisible"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>
