<?xml version="1.0" encoding="utf-8"?>

<!--
   Project: SpotTicket
   Copyright 2025 Olgun Yılmaz

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.SettingsFragment">


    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"

        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintVertical_bias="0.03"

        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/title_settings"
        android:textColor="#E0F1FF"

        android:textSize="24sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settingsProfileLayout"

        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHeight_percent="0.15"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintWidth_percent="0.8">

        <ImageView
            android:id="@+id/settingsProfileImage"

            android:layout_width="0dp"
            android:layout_height="0dp"

            android:background="@drawable/circular_image"
            android:src="@drawable/sample_profile_image"


            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.65"


            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.25" />

        <TextView
            android:id="@+id/settingsNameText"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Name"

            android:fontFamily="@font/roboto"
            android:src="@drawable/sample_profile_image"
            android:textColor="@color/settings_name_color"

            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"


            app:layout_constraintHeight_percent="0.5"

            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4"
            app:layout_constraintWidth_percent="0.2" />

        <TextView
            android:id="@+id/settingsCityText"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:fontFamily="@font/roboto"
            android:src="@drawable/sample_profile_image"
            android:textColor="@color/settings_city_color"
            android:text="City"

            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"


            app:layout_constraintHeight_percent="0.5"

            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@id/settingsNameText"

            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintWidth_percent="0.2" />

        <Button
            android:id="@+id/settingsEditButton"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:background="@drawable/edit_button_background"

            android:fontFamily="@font/roboto_medium"
            android:src="@drawable/sample_profile_image"
            android:text="@string/title_edit"
            android:textColor="@color/settings_edit_color"

            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.4" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settingsNotificationLayout"

        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintHeight_percent="0.05"

        app:layout_constraintVertical_bias="0.4"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/settingsProfileLayout"

        app:layout_constraintStart_toStartOf="@id/settingsProfileLayout"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/notificationIcon"

            android:layout_width="0dp"
            android:layout_height="0dp"

            app:layout_constraintWidth_percent="0.08"
            app:layout_constraintHeight_percent="0.6"

            android:src="@drawable/notifications"

            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/notificationsText"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/roboto"
            android:src="@drawable/sample_profile_image"
            android:text="@string/title_notifications"
            android:textColor="#E0F1FF"

            android:textSize="16sp"

            app:layout_constraintHorizontal_bias="0.1"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toEndOf="@id/notificationIcon"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settingsLanguageLayout"

        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintHeight_percent="0.05"

        app:layout_constraintVertical_bias="0.5"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/settingsProfileLayout"

        app:layout_constraintStart_toStartOf="@id/settingsProfileLayout"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/languageIcon"

            android:layout_width="0dp"
            android:layout_height="0dp"

            app:layout_constraintWidth_percent="0.08"
            app:layout_constraintHeight_percent="0.6"

            android:src="@drawable/icon_tr"

            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/languageText"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/roboto"
            android:src="@drawable/sample_profile_image"
            android:text="Dil : Türkçe"
            android:textColor="#E0F1FF"

            android:textSize="16sp"

            app:layout_constraintHorizontal_bias="0.1"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toEndOf="@id/languageIcon"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settingsPasswordLayout"

        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="@id/settingsProfileLayout"

        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintStart_toStartOf="@id/settingsProfileLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">

        <ImageView
            android:id="@+id/passwordIcon"

            android:layout_width="0dp"
            android:layout_height="0dp"

            android:src="@drawable/lock"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintHeight_percent="0.6"

            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.08" />

        <TextView
            android:id="@+id/settingsPasswordText"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/roboto"
            android:text="@string/title_change_password"
            android:textColor="#E0F1FF"

            android:textSize="16sp"

            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"

            app:layout_constraintStart_toEndOf="@id/passwordIcon"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settingsLogOutLayout"

        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintHeight_percent="0.05"

        app:layout_constraintVertical_bias="0.7"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/settingsProfileLayout"

        app:layout_constraintStart_toStartOf="@id/settingsProfileLayout"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/logOutIcon"

            android:layout_width="0dp"
            android:layout_height="0dp"

            app:layout_constraintWidth_percent="0.08"
            app:layout_constraintHeight_percent="0.6"

            android:src="@drawable/sign_out"

            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/logOutText"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/roboto"
            android:src="@drawable/sample_profile_image"
            android:text="@string/title_log_out"
            android:textColor="#E0F1FF"

            android:textSize="16sp"

            app:layout_constraintHorizontal_bias="0.1"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toEndOf="@id/logOutIcon"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>